--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.2",
     "axios": "^0.25.0",
+    "dayjs": "^1.11.2",
+    "debounce": "^1.2.1",
     "draft-js": "^0.11.7",
     "draft-js-prism": "^1.0.6",
     "immer": "^9.0.12",
@@ -33,6 +35,7 @@
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@types/debounce": "^1.2.1",
     "@types/draft-js": "^0.11.9",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^17.0.31",
